# CorpMail-Agent

./: README.md  main.py  pyproject.toml
backend/interactors/: __init__.py  email.py
backend/routes/: __init__.py  chat.py  email.py
backend/schemas/: __init__.py  email.py
backend/services/: graph.py  llm.py  sendgrid.py  tool.py
frontend/: frontend.py
